Fix toolbar layout issue

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -114,7 +114,6 @@ button {
 }
 
 #toolbar_container {
-  height: 40px;
   padding: 10px;
   display: flex;
   flex-direction: row;
